--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -62,7 +62,7 @@ hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
-default_timezone = utc
+default_timezone = Asia/Shanghai
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
@@ -288,7 +288,7 @@ base_url = http://localhost:8080
 # any IANA timezone string (e.g. Europe/Amsterdam). If left empty the
 # default value of core/default_timezone will be used
 # Example: default_ui_timezone = America/New_York
-default_ui_timezone = UTC
+default_ui_timezone = Asia/Shanghai
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
@@ -340,7 +340,7 @@ access_logfile = -
 error_logfile = -
 
 # Expose the configuration file in the web server
-expose_config = False
+expose_config = True
 
 # Expose hostname in the web server
 expose_hostname = True
