--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -7,8 +7,8 @@ services:
             - POSTGRES_USER=airflow
             - POSTGRES_PASSWORD=airflow
             - POSTGRES_DB=airflow
-#        ports:
-#            -  5432:5432
+        ports:
+            - 25432:5432
 
     webserver:
         extends:
@@ -19,11 +19,14 @@ services:
         depends_on:
             - postgres
         ports:
-            - 8080:8080
+            - 28080:8080
 #        networks:
 #            - proxy
 #            - default
-#        environment:
+        environment:
+            - TZ=Asia/Shanghai
+            - AIRFLOW__CORE__DEFAULT_TIMEZONE=Asia/Shanghai
+            - AIRFLOW__WEBSERVER__DEFAULT_UI_TIMEZONE=Asia/Shanghai
 #            # Web Server Config
 #            - AIRFLOW__WEBSERVER__DAG_DEFAULT_VIEW=graph
 #            - AIRFLOW__WEBSERVER__HIDE_PAUSED_DAGS_BY_DEFAULT=true
@@ -52,6 +55,12 @@ services:
         command: scheduler
         depends_on:
             - postgres
+        ports:
+            - 28081:8080
+        environment:
+            - TZ=Asia/Shanghai
+            - AIRFLOW__CORE__DEFAULT_TIMEZONE=Asia/Shanghai
+            - AIRFLOW__WEBSERVER__DEFAULT_UI_TIMEZONE=Asia/Shanghai
 #        environment:
 #            # Performance Tweaks
 #            # Reduce how often DAGs are reloaded to dramatically reduce CPU use
